BaekJoon/compiling_error.txt
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:2:1: error: stray '\342' in program
 ​
 ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:2:2: error: stray '\200' in program
 ​
  ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:2:3: error: stray '\213' in program
 ​
   ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:7:5: error: stray '\342' in program
     ​
     ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:7:6: error: stray '\200' in program
     ​
      ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:7:7: error: stray '\213' in program
     ​
       ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:14:5: error: stray '\342' in program
     ​
     ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:14:6: error: stray '\200' in program
     ​
      ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:14:7: error: stray '\213' in program
     ​
       ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:22:5: error: stray '\342' in program
     ​
     ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:22:6: error: stray '\200' in program
     ​
      ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:22:7: error: stray '\213' in program
     ​
       ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:24:5: error: stray '\342' in program
     ​
     ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:24:6: error: stray '\200' in program
     ​
      ^
C:\Users\SEUNGHUNJANG\OneDrive - rice.edu\COMP140\Atom_Codes\BaekJoon\2293.cpp:24:7: error: stray '\213' in program
     ​
       ^
